automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>
-      
-    </title>
+    <title>What?</title>
   </head>
   <body>
     
   </body>
-  
 </html>
